Preparation for test of release 0.2.0

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,8 @@ knitr::opts_chunk$set(
 
 QGERT stands for Qualitas Genetic Evaluation Routine Tools. The goal of QGERT is to provide a set of standardized tools to prepare data and topost-process results of the routine genetic evaluation. The main focus of the post-processing is on quality assurance and on results checking. As a consequence of that, principles of reproducibility of all tasks are followed as closely as possible.
 
+The package website is available at: https://pvrqualitasag.github.io/qgert/
+
 
 ## Installation
 
@@ -39,6 +41,6 @@ Examples of basic use cases are shown in the different articles that are availab
 * Getting Started: Description of basic usage of the functionality provided by `qgert`.
 * Comparison Plots: Explanation of what a comparison plot is.
 * Comparison Plot Report: Combination of comparison plots in a single report.
-* Spinning bash script: Conversion of specially annotated bash scripts into an html page.
+* Spinning bash script: Conversion of specially annotated bash scripts into an HTML page.
 
 
