Updated information on getting started.

--- a/vignettes/qgert_getting_started.Rmd
+++ b/vignettes/qgert_getting_started.Rmd
@@ -20,12 +20,31 @@ library(qgert)
 
 
 ## Abstract
-Routine genetic evaluations are assessed by comparing the results of a given evaluation run to the results of a previous run. Such comparisons are mostly done by the means of scatter plots. The goal of this package is to provide tools to seamlessly generate the plots that are required for quality assurance and error checking.
+The package `qgert` provides a set of tools that are useful for genetic evaluation routine tasks. The tools are provided as bash scripts or as R-functions. 
 
 
-## Introduction
+## Installation
+The package can be installed from github with 
+
+```{r installation, eval=FALSE}
+# install.packages("devtools")
+devtools::install_github("pvrqualitasag/qgert")
+```
 
 
-## Plots
+## Features
+The following features are available in package `qgert`
+
+1. Comparison Plot Reports: For each trait group comparison plots can be summarized into a report. Please have a look at the specific article on [comparison plot reports](https://pvrqualitasag.github.io/qgert/articles/comparison_plot_report.html).
+2. Create New Bash Script: new bash scripts can be created using the command: `<path-to-rlib>/qgert/bash/new_bash_script.sh -t <path-to-rlib>/qgert/templates/bash/bash_script_so.template` where on the ZWS-servers the value for `<path-to-rlib>` corresponds to `/home/zws/lib/R/library`.
+3. Convert Bash Scripts To HTML: Specially formatted bash scripts can be converted into a static HTML-page. For more details, please have a look at the article on [Spinning Bash Scripts](https://pvrqualitasag.github.io/qgert/articles/spin_bash_script.html).
+
+Problems and Bugs should be reported at https://github.com/pvrqualitasag/qgert/issues.
+
+
+## Latest Update
+```{r}
+Sys.time()
+```
 
 
