--- a/vignettes/split_gsruns_sorted_rt.Rmd
+++ b/vignettes/split_gsruns_sorted_rt.Rmd
@@ -54,4 +54,6 @@ As an additional requirement, the produced number of lists should contain the jo
 ## Description - How This Is Done
 Given a directory where the logfiles of the previous evaluation is archived (or just a simple run-label such as 1908), the logfiles are searched for the predicted running time of the respective estimation job. This information is written to an outputfile. The outputfile is read into R where the records are sorted according to their running times. After the sort, a specified number of job-files is written. These files have the name-prefix `gsSortedRuns.txt` followed by a number. 
 
-To prepare the binary version of the SNP-Data one gsRun-job per breed is written to the file `gsRuns.txt.snpBin`. All jobs that are contained in `gsRuns.txt.snpBin` are also in the `gsSortedRuns.txt`-files. 
+To prepare the binary version of the SNP-Data one gsRun-job per breed is written to the file `gsRuns.txt.snpBin`. The jobs that are contained in `gsRuns.txt.snpBin` are not contained in the `gsSortedRuns.txt`-files. Hence all the programs with partitioned gs-Runs-lists, `gsRuns.txt.snpBin` must also be used as an argument.
+
+
