Re-building site docu

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-QGERT stands for Qualitas Genetic Evaluation Routine Tools. The goal of QGERT is to provide a set of standardized tools to prepare data and topost-process results of the routine genetic evaluation. The main focus of the post-processing is on quality assurance and on results checking. As a consequence of that, principles of reproducibility of all tasks are followed as closely as possible.
+QGERT stands for **Qualitas Genetic Evaluation Routine Tools**. The goal of QGERT is to provide a set of standardized tools to prepare data and to post-process results of the routine genetic evaluation. The main focus of the post-processing is on quality assurance and on results checking. As a consequence of that, principles of reproducibility of all tasks are followed as closely as possible.
 
 The package website is available at: https://pvrqualitasag.github.io/qgert/
 
@@ -38,10 +38,11 @@ devtools::install_github("pvrqualitasag/qgert")
 
 Examples of basic use cases are shown in the different articles that are available from this site. A short description of all available articles is listed below.
 
-* Getting Started: Description of basic usage of the functionality provided by `qgert`.
-* Comparison Plots: Explanation of what a comparison plot is.
-* Comparison Plot Report: Combination of comparison plots in a single report. Reports can be generated from within R or with a wrapper bash-script.
-* Spinning bash script: Conversion of specially annotated bash scripts into an HTML page.
+* [Getting Started](https://pvrqualitasag.github.io/qgert/articles/qgert_getting_started.html): Description of basic usage of the functionality provided by `qgert`.
+* [Comparison Plots](https://pvrqualitasag.github.io/qgert/articles/comparison_plots.html): Explanation of what a comparison plot is.
+* [Comparison Plot Report](https://pvrqualitasag.github.io/qgert/articles/comparison_plot_report.html): Combination of comparison plots in a single report. Reports can be generated from within R or with a wrapper bash-script.
+* [Spinning bash script](https://pvrqualitasag.github.io/qgert/articles/spin_bash_script.html): Conversion of specially annotated bash scripts into an HTML page.
+* [Split gsRuns According To Predicted Runtimes](https://pvrqualitasag.github.io/qgert/articles/split_gsruns_sorted_rt.html): A list of computing jobs is split into smaller computation batches according to estimated runtimes from a previous evaluation.
 
 
 ## Latest Change
