Finished a first version of the vignette

--- a/vignettes/create_toplist_bull_bvch.Rmd
+++ b/vignettes/create_toplist_bull_bvch.Rmd
@@ -34,5 +34,15 @@ The input consists of the lists of predicted breeding values for all bulls. Thes
 ## Procedure
 The procedure to create the Toplists is done according to the following steps.
 
+1. Input consisting of a table of breeding values where columns contain basic information of bulls and predicted breeding values and each row corresponds to a different bull. This type of tabular input is read from csv-files which are exported from the database. For each sub-breed (BV and OB) a separate csv-file is exported. The input data is read into a list of tibbles.
+2. For every trait of interest a ranking is created and stored in the list of input data.
+3. The ranked data are written to different xlsx workbooks using the package `openxlsx`.
 
-1. 
+
+## Creation of Toplists
+A shell script is used as a wrapper to locate the input data and to place the result in the correct directory.
+
+```
+./create_tl_bvch -c 2008 -d fendt 
+```
+
